--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body{
-    background-color: rgb(82 82 91);
+    background-color: rgb(82, 82, 91, 0.4);
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
 }
 
 body:hover{
@@ -13,6 +15,7 @@ body:hover{
     border-radius: 30px;
     display: flex;
     flex-direction: column;
+    width: 90%;
     
 }
 
@@ -31,7 +34,7 @@ body:hover{
     align-items: start;
     padding-left: 60px;
     gap: 30px;
-
+    position:relative;
     border-radius: 20px;
     
 }
@@ -40,6 +43,9 @@ body:hover{
     color: gray;
     text-decoration: none;
     font-weight: 800;
+    font-size: 20px;
+    display: flex;
+    gap: 5px;
 }
 
 a:hover{
@@ -53,6 +59,137 @@ a:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    color: gray;
    
+}
+
+.details-panel{
+    display: flex;
+    background-color: rgba(250,250,250, 0.1);
+    border-radius: 20px;
+}
+
+/*svg */
+
+.svg{
+    width: 20px;
+}
+
+/*tasks */
+.task-check{
+   background-color: aquamarine;
+    
+}
+
+.task{
+    display: flex;
+    align-items: center;
+    
+}
+
+.task-check{
+    border: 1px solid blue;
+    border-radius: 10px;
+    padding: 100px;
+    
+}
+
+.task-columb{
+    display:  flex;
+    border-bottom: 1px dotted gray;
+    justify-content: flex-start;
+    font-size: 25px;
+    margin-left: 30px;
+    width: 600px;
+    max-width: 600px;
+    text-align: center;
+}
+
+.category-columb{
+    display: flex;
+    margin-left: 100px;
+    color: orange;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-taskbtn{
+    display: flex;
+    padding: 30px 400px;
+    background-color: rgba(250,250,250, 0.1);
+    border-radius: 20px;
+    border: 2px dotted gray;
+    color:  rgb(248 113 113);
+    font-size: 25px;
+}
+
+.add-taskbtn:hover{
+    cursor: pointer;
+    padding: 35px 410px;
+    border: 1px solid rgb(248 113 113);
+}
+
+.detailsbtn{
+    background-image: url("./assets/arrow.svg");
+    background-repeat: no-repeat;
+    background-position:center;
+    width: 40px;
+    height: 30px;
+    background-size: 20px 20px;
+    border: none;
+    background-color: rgba(250,250,250, 0.1);
+    
+}
+
+.detailsbtn:hover{
+    cursor: pointer;
+}
+
+/* details form*/
+
+.details-form{
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(63, 63, 70,0.1);
+    width: 600px;
+    border-radius: 20px;
+    color: gray;
+    padding: 20px;
+    gap: 20px;
+    
+}
+
+.task-input{
+    border: 1px dotted gray;
+    background-color: rgba(63, 63, 70,0.001);
+    border-radius: 10px;
+    width: 500px;
+    height: 50px;
+    color: rgb(63 63 70);
+    font-size: 16px;
+    
+}
+
+.task-input:hover{
+    cursor: pointer;
+    border: 2px dotted gray;
+}
+
+.task-input:focus{
+    border: 2px dotted gray;
+    outline: none;
+}
+
+#task-description-input{
+    resize: none;
+    height: 200px;
+    scrollbar-width: thin;
+    scrollbar-color: rgb(39 39 42);
+    
+    
+}
+
+
+h1{
+    color: rgb(63 63 70)
 }
