--- a/styles.css
+++ b/styles.css
@@ -101,32 +101,40 @@ a:hover{
     font-size: 25px;
     margin-left: 30px;
     width: 600px;
-    max-width: 600px;
     text-align: center;
 }
 
 .category-columb{
     display: flex;
-    margin-left: 100px;
     color: orange;
     justify-content: center;
     align-items: center;
+    font-size: 14px;
+    margin-left: 20px;
 }
 
 .add-taskbtn{
     display: flex;
-    padding: 30px 400px;
+    padding-right: 500px;
+    padding-left: 40px;
+    padding-top: 25px;
+    padding-bottom: 25px;
     background-color: rgba(250,250,250, 0.1);
-    border-radius: 20px;
-    border: 2px dotted gray;
-    color:  rgb(248 113 113);
+    border-radius: 10px;
+    border: 1px dotted gray;
+    color:  gray;
     font-size: 25px;
+    margin-bottom: 30px;
+    background-image: url("./assets/plus.svg");
+    background-repeat: no-repeat;
+    background-position:10px;
+    background-size: 20px 20px;
+    
 }
 
 .add-taskbtn:hover{
     cursor: pointer;
-    padding: 35px 410px;
-    border: 1px solid rgb(248 113 113);
+    border: 3px dotted gray;
 }
 
 .detailsbtn{
@@ -188,8 +196,47 @@ a:hover{
     
     
 }
+#task-category-input{
+    width: 200px;
+}
 
+.details-tasks-btn{
+    display: flex;
+    gap: 70px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 300px;
+}
+
+.delete-taskbtn{
+    padding: 20px 50px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    border: 1px solid gray;
+    background-color: rgba(63, 63, 70,0.001);
+    font-size: 18px;
+}
+
+.delete-taskbtn:hover{
+    cursor: pointer;
+    border: 2px solid gray;
+}
+
+.save-taskbtn{
+    padding: 20px 45px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    border: 1px solid gray;
+    background-color: rgb(251 191 36);
+    font-size: 18px;
+}
+
+.save-taskbtn:hover{
+    cursor: pointer;
+    border: 2px solid gray;
+}
 
 h1{
-    color: rgb(63 63 70)
+    color: rgb(63 63 70);
+    
 }
