added the category functionality and category display, fixed options bug

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body:hover{
     position:relative;
     border-radius: 20px;
     height: 75%;
+    overflow-y: auto;
    
     
 }
@@ -75,6 +76,56 @@ a:hover{
     border-radius: 20px;
     height: 90%;
     
+}
+.category-div{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    
+}
+
+.category{
+    
+    color: gray;
+    border-radius: 20px;
+    overflow-y: auto;
+    
+    
+}
+.category:hover{
+    background-color: rgba(63 ,63 ,70,0.5);
+    color: rgb(41 37 36);
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.add-category-btn{
+    border: none;
+    background-color: rgba(250,250,250, 0.1);
+    font-size: 20px;
+    color: gray;
+    font-weight: bold;
+}
+
+.add-category-btn:hover{
+    background-color: rgba(63 ,63 ,70,0.5);
+    color: rgb(41 37 36);
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.add-category-btn2{
+   background-color: rgb(251 191 36);
+   margin-left: 20px;
+   padding: 10px 40px;
+   border: none;
+   border-radius: 10px;
+}
+
+.add-category-btn2:hover{
+   
+    padding: 12px 42px;
+    cursor: pointer
 }
 
 @media (max-width: 600px){
